# Auto-Link-Tyut-School-Net

./: .gitignore  CMakeLists.txt  CPP-Qt-Rewrite-Plan.md  PYTORCH_TRAINING_GUIDE.md  app.py  augment_dataset.py  build_spec.py  config.json  pyproject.toml  readme.md  requirements.txt  setup_local_libs.ps1  test.py  web_auto_login.py
.github/: copilot-instructions.md
autolink_modules/: __init__.py  captcha_handler.py  captcha_utils.py  config_manager.py  course_grabber.py  html_recorder.py  jmcomic_logic.py  js_scripts.py  login_logic.py  main_window.py  preprocess_helper.py
build_c/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tyut_auto_login.sln  tyut_auto_login.vcxproj  tyut_auto_login.vcxproj.filters
build_c/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_c/tyut_auto_login.dir/Release/tyut_auto_login.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_c/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_c/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
resources/jmcomic/: option.yml
resources/js/: get_check_course_page.js  get_select_course.js  qt_js.qrc
scripts/: config.example.json  config.json  course_grabber_config.json
src/: main.cpp
src/captcha/: captcha_handler.cpp  captcha_handler.h  preprocess.cpp  preprocess.h
src/ui/: main_window.cpp  main_window.h
tyutnet/: __init__.py  config.py
